LMS.App/ClientApp/src/root/root/chat/chat.component.css
.chat-upload {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 20px;
}

.chat-upload-img img {
  width: 150px;
  height: 100px;
  object-fit: cover;
}

.chatImage {
  max-height: 35px;
}

.selectedChatHead {
  background-color: #eaeaea;
  border-color: #ff821c;
}

.badgeBackground {
  background: red;
}

.message span {
  color: #64748b;
  font-size: 16px;
}

.line-date span {
  display: inline-block;
  padding: 0 16px;
  white-space: nowrap;
}

hr {
  width: 100%;
  border-color: #64748b;
}

.cursor_pointer{
  cursor: pointer;
}

